# local-intelligence-hub

./: .coveragerc  .env-example  .flake8  .gitignore  .graphqlrc  CNAME  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Gemfile  README.md  _config.yml  _config_dev.yml  apollo.config.js  apollo.config.json  area.html  docker-compose.yml  explore.html  index.html  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
.devcontainer/auto-quick-setup/: devcontainer.json
.github/workflows/: build.yml  build_dev_image.yml  lint.yml  mirror.yml  tests.yml
_includes/: add-data-modal.html  check-icon.html  geolocate-icon.html  header.html  search-icon.html  tcc-logo.html
_includes/icons/: geolocate.html  person.html  search.html
_layouts/: default.html
_sass/: _modal.scss  _utilities.scss  _variables.scss  main.scss
ceuk-marking/: asgi.py  settings.py  urls.py  wsgi.py
conf/: crontab-example  env-example  imports.csv  imports.json
crowdsourcer/: admin.py  apps.py  models.py  views.py
crowdsourcer/migrations/: 0001_initial.py  0002_add_question_no.py
crowdsourcer/tests/: test_views.py
django/: pyproject.toml
django/conf/: httpd.conf-example
django/hub/: context_processors.py  filters.py  mixins.py  models.py  tokens.py  transformers.py
django/local_intelligence_hub/: urls.py  wsgi.py
django/script/: black  createsuperuser  generate-ssl-certificates  setup
docs/: PRODUCTION.md
hub/: admin.py  analytics.py  apps.py  authbackend.py  cache_keys.py  custom_lookups.py  fields.py  filters.py  forms.py  handlers.py  import_utils.py  metrics.py  middleware.py  mixins.py  models.py  permissions.py  renderers.py  site_utils.py  sitemap.py  storage.py  tasks.py  transformers.py  validation.py  views.py  wagtail_hooks.py
hub/data_imports/: geocoding_config.py  utils.py
hub/fixtures/: area_actions.json  area_data.json  areas.json  areas_23.json  duplicate_mps.json  elections.json  mp_memberships.json  mps.json  mps_23.json  regional_health_data_for_tests.csv  regions.json  sites.json
hub/graphql/: auth_mutations.py  context.py  dataloaders.py  mutations.py  permissions.py  schema.py  types.py  utils.py
hub/migrations/: 0001_initial.py  0002_area_geometry.py  0003_person_persondata_and_more.py  0004_area_gss_unique.py  0005_add_date_to_persondata.py  0006_increase_data_type_name_length.py  0008_add_person_photo.py  0009_areadata.py  0010_add_dataset.py  0011_create_datasets_from_types.py  0012_remove_datatype_description_remove_datatype_source_and_more.py  0013_datatype_average_datatype_label.py  0014_dataset_is_range.py  0015_data_set_categories_etc.py  0016_alter_dataset_options.py  0018_add_percentage_data_type.py  0019_add_dataset_source_properties.py  0020_add_data_type_description.py  0021_add_data_type_order.py  0023_replace_number_data_type.py  0024_areadata_float_areadata_int_persondata_float_and_more.py  0025_dataset_comparators_dataset_default_value_and_more.py  0027_add_dataset_min_max.py  0028_add_shader_colours.py  0029_add_is_filterable_to_dataset.py  0030_dataset_subcategory.py  0031_token.py  0032_userproperties.py  0033_userproperties_full_name.py  0034_userproperties_account_confirmed.py  0035_userproperties_last_seen.py  0036_dataset_source_date.py  0036_userproperties_agreed_terms.py  0037_dataset_is_shadable.py  0038_make_categorical_data_shading_consistent.py  0039_add_blank_filling_options.py  0039_alter_dataset_subcategory.py  0041_alter_dataset_subcategory.py  0042_add_dataset_release_date.py  0042_areatype.py  (+184 more)
hub/restricted_file_field/: README.rst  fields.py  forms.py  validators.py
hub/templatetags/: hub_filters.py  siteinclude.py
hub/tests/: test_admin.py  test_api.py  test_external_data_source_integrations.py  test_external_data_source_parsers.py  test_forms.py  test_geocoding.py  test_import_area_data.py  test_import_areas.py  test_import_from_config.py  test_import_mps.py  test_import_policing_areas.py  test_models.py  test_permissions.py  test_postcodes_io_db.py  test_readonly_sources.py  test_source_parser.py  test_sources.py  test_utils.py  test_validators.py  test_views.py  utils.py
hub/views/: accounts.py  api.py  area.py  core.py  explore.py  landingpages.py  mapped.py  tools.py  vector_tiles.py
local_intelligence_hub/: asgi.py  settings.py  urls.py
nextjs/: .env.example  .eslintrc.json  .gitignore  .prettierignore  codegen.ts  components.json  next.config.js  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  stats.json  tailwind.config.ts  tsconfig.json  types.d.ts
nextjs/src/: env.ts  middleware.ts
script/: bootstrap  build  build_js  createsuperuser  dev-command  dev-populate  flake8  import-all-data  lint  manage  server  setup-and-import  test  update
static/js/: all.js
templates/: 404.html
templates/email/: activation_email.html  activation_subject.txt  (+3 more)
utils/: __init__.py  asyncio.py  cached_fn.py  constituency_mapping.py  django_json.py  findthatpostcode.py  geo.py  geo_reference.py  google_maps.py  google_sheets.py  img.py  log.py  mapbox.py  mapit.py  mapit_types.py  nominatim.py  postcode.py  postcodesIO.py  postgis_geocoder.py  procrastinate.py  py.py  render.py  statistics.py  url.py
(+959 files in other folders)
