[tool.poetry]
name = "local-intelligence-hub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.20"
django-bootstrap5 = "^22.1"
django-environ = "^0.9.0"
django-sslserver = "^0.22"
psycopg2 = "^2.9.3"
django-libsass = "^0.9"
requests-cache = "^0.9.6"
Pillow = "^10.3.0"
python-magic = "^0.4.27"
tqdm = "^4.66.3"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
mysoc-dataset = "^0.3.0"
django-jsonform = "^2.15.0"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.1"
mailchimp-marketing = {git = "https://github.com/mailchimp/mailchimp-marketing-python.git"}
geopandas = "^0.14.4"
pyarrow = "^16.1.0"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.7.0"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # line too long, sorted with formatter where it can be
    "E501", 
]


[tool.ruff.lint.isort]
known-first-party = ["hub"]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
django = ["django"]